fix: wildcard specification matching